updated background photo; fixed stretch issue

--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,13 @@
   pointer-events: none;
 }
 
-.pageBackground{
+.pageBackground {
   background-attachment: fixed;
-  /* background-size: 'cover'; */
+  background-size: cover;
+  /* background-size: auto; */
+  /* background-size: contain; */
+  background-repeat: no-repeat;
+  /* border: 50px solid red; */
   /* position: relative; */
 }
 
